--- a/application/home/view/default/base/common.html
+++ b/application/home/view/default/base/common.html
@@ -119,7 +119,12 @@
 	<div class="hidden"><!-- 用于加载统计代码等隐藏元素 -->
 		{block name="hidden"}{/block}
 	</div>
-
 	<!-- /底部 -->
+	{block name="js"}
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="/js/jquery-1.11.2.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="/js/bootstrap.min.js"></script>
+	{/block}
 </body>
 </html>
